--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -27,34 +27,34 @@ jobs:
           ssh-private-key: |
             ${{ secrets.SSH_PRIVATE_KEY }}
      
-      #- name: Add Repo Ansible
-       # run: |
-        #  sudo apt-get update && sudo apt-get install software-properties-common -y && sudo apt-add-repository --yes --update ppa:ansible/ansible
+      - name: Add Repo Ansible
+        run: |
+          sudo apt-get update && sudo apt-get install software-properties-common -y && sudo apt-add-repository --yes --update ppa:ansible/ansible
      
-      #- name: Check Ansible Installation and install
-       # id: check_ansible
-       # run: |
-         # if ! ansible --version >/dev/null 2>&1; then
-           # echo "Ansible is not installed"
-           # sudo apt-get update
-          #  sudo apt-get install -y ansible
-          #else
-            #echo "Ansible is already installed"
-          #fi
+      - name: Check Ansible Installation and install
+        id: check_ansible
+        run: |
+          if ! ansible --version >/dev/null 2>&1; then
+           echo "Ansible is not installed"
+           sudo apt-get update
+           sudo apt-get install -y ansible
+          else
+            echo "Ansible is already installed"
+          fi
             
-      #- name: Install Python
-       # run: |
-        #  if ! command -v python3 &> /dev/null; then
-         #   sudo apt-get update
-          #  sudo apt-get install -y python3
-          #fi
-          #python3 --version
+      - name: Install Python
+        run: |
+          if ! command -v python3 &> /dev/null; then
+           sudo apt-get update
+           sudo apt-get install -y python3
+          fi
+          python3 --version
           
           
-      #- name: Install Python Pip,Boto3 and other dependencies
-       # run: |
-        #   sudo apt-get update && sudo apt-get install python3-pip -y
-         #  sudo apt-get install python3-winrm -y && sudo sudo pip3 install boto3
+      - name: Install Python Pip,Boto3 and other dependencies
+        run: |
+           sudo apt-get update && sudo apt-get install python3-pip -y
+           sudo apt-get install python3-winrm -y && sudo sudo pip3 install boto3
      
       - name: Set the dynamic inventory by copying the file from repo
         run: |
