--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -1,4 +1,4 @@
-name: New Ansible Play Updated Windows test for privateip testnew
+name: New Ansible Play Updated Windows test for privateip testnew windows1
 on:
   push:
     branches:
